feat: 추천 결과 DTO 구조 변경에 따른 서비스 레이어 응답 변경