@@ -1,12 +1,14 @@
 package com.comprehensive.eureka.recommend.service.engine;
 
+import com.comprehensive.eureka.recommend.dto.BenefitDto;
 import com.comprehensive.eureka.recommend.dto.PlanDto;
-import com.comprehensive.eureka.recommend.dto.RecommendationDto;
+import com.comprehensive.eureka.recommend.dto.RecommendPlanDto;
+import com.comprehensive.eureka.recommend.dto.UserPreferenceDto;
+import com.comprehensive.eureka.recommend.dto.response.RecommendationResponseDto;
 import com.comprehensive.eureka.recommend.exception.ErrorCode;
 import com.comprehensive.eureka.recommend.exception.RecommendationException;
+import com.comprehensive.eureka.recommend.util.api.PlanApiServiceClient;
 import com.comprehensive.eureka.recommend.util.api.UserApiServiceClient;
-import java.time.LocalDate;
-import java.time.Period;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -20,22 +22,38 @@ import org.springframework.stereotype.Component;
 public class BasicRecommender {
 
     private final UserApiServiceClient userApiServiceClient;
+    private final PlanApiServiceClient planApiServiceClient;
 
-    public List<RecommendationDto> recommendPlansByAge(List<PlanDto> allPlans, Long userId, int age) {
+    public RecommendationResponseDto recommendPlansByAge(
+            List<PlanDto> allPlans,
+            UserPreferenceDto userPreference,
+            Double avgDataUsage,
+            int age
+    ) {
         try {
             String keyword = getKeywordForAge(age);
 
-            return allPlans.stream()
+            List<RecommendPlanDto> recommendPlans =  allPlans.stream()
                     .filter(p -> p.getPlanCategory().contains(keyword))
                     .sorted(Comparator.comparing(PlanDto::getMonthlyFee).reversed())
                     .limit(3)
                     .map(p -> {
-                        return RecommendationDto.builder()
+                        return RecommendPlanDto.builder()
                                 .plan(p)
                                 .recommendationType("AGE")
                                 .build();
                     })
-                    .collect(Collectors.toList());
+                    .peek(recommendPlanDto -> {
+                        List<BenefitDto> benefits = fetchBenefitsByPlanId(recommendPlanDto.getPlan().getPlanId());
+                        recommendPlanDto.setBenefits(benefits);
+                    })
+                    .toList();
+
+            return RecommendationResponseDto.builder()
+                    .userPreference(userPreference)
+                    .avgDataUsage(avgDataUsage)
+                    .recommendPlans(recommendPlans)
+                    .build();
 
         } catch (Exception e) {
             log.error("[기본 추천 로직 실패] 요금제 추천 기본 로직이 실패했습니다.", e);
@@ -49,5 +67,15 @@ public class BasicRecommender {
         if (age <= 29) return "유스";
         if (age < 65) return "프리미엄";
         return "시니어";
+    }
+
+    private List<BenefitDto> fetchBenefitsByPlanId(Integer planId) {
+        try {
+            return planApiServiceClient.getBenefitsByPlanId(planId);
+
+        } catch (Exception e) {
+            log.error("[외부 API 호출 실패] 요금제 혜택 정보 호출에 실패했습니다.", e);
+            throw new RecommendationException(ErrorCode.PLAN_BENEFIT_LOAD_FAILURE);
+        }
     }
 }
